2002-03-12  Damon Chaplin  <damon@ximian.com>

	* index.html: added link to Glade port to windows.

2002-03-06  Damon Chaplin  <damon@ximian.com>

	* apps.html: added HushTones IM.

2002-02-26  Damon Chaplin  <damon@ximian.com>

	* links.html: added SnapperPerl.

2002-02-22  Damon Chaplin  <damon@ximian.com>

	* apps.html: added XMMS-Crossfade.

2002-02-21  Damon Chaplin  <damon@ximian.com>

	* apps.html: added polyXmass.

2002-02-11  Damon Chaplin  <damon@ximian.com>

	* apps.html: added gEuCo.

2002-02-08  Damon Chaplin  <damon@ximian.com>

	* apps.html: updated link to Oww.

2002-02-06  Damon Chaplin  <damon@ximian.com>

	* index.html: 
	* download.html: 
	* history.html: added 0.6.4 release stuff.

2002-02-04  Damon Chaplin  <damon@ximian.com>

	* apps.html: added AVR Delay loop Generator.

2002-01-18  Damon Chaplin  <damon@ximian.com>

	* index.html: added new tutorial.

	* download.html: updated last stable version to 0.6.2.

2002-01-07  Damon Chaplin  <damon@ximian.com>

	* apps.html: added BookBase and GnomeZine.

2001-12-13  Damon Chaplin  <damon@ximian.com>

	* apps.html: added GCronTime.

2001-12-10  Damon Chaplin  <damon@ximian.com>

	* apps.html: added ROME Target Builder.

2001-11-28  Damon Chaplin  <damon@ximian.com>

	* apps.html: added gmp3burn.

2001-11-07  Damon Chaplin  <damon@ximian.com>

	* apps.html: added PPPMON.

	* index.html: added 2 news items.

2001-10-11  Damon Chaplin  <damon@ximian.com>

	* apps.html: added Terraform.

2001-10-02  Damon Chaplin  <damon@ximian.com>

	* links.html: added links for Ruby.

	* apps.html: commented out a few broken links, and updated a few.
	I didn't manage to check through many, though.
	Added dSQL.

2001-08-22  Damon Chaplin  <damon@ximian.com>

	* index.html: added link to Spanish translation of FAQ.

	* apps.html: updated Lycadican link & added several new apps.

2001-07-13  Damon Chaplin  <damon@ximian.com>

	* apps.html: added 2 more apps.

2001-06-25  Damon Chaplin  <damon@ximian.com>
