@@ -710,6 +710,11 @@ to Euros and vice-versa.
 </ul>
 
 <ul>
+<li><a href="http://perso.club-internet.fr/burnos/gneuro/">Gneuro</a> -
+another euro/currency converter. This one has a panel applet mode as well.
+</ul>
+
+<ul>
 <li><a href="http://www.polyxmass.org">polyXmass</a>
 - a scientific program aimed at
 simulating/analyzing mass spectrometric data on a variety of polymers. 
